fixing-all the little things and finilzing the portfolio 3

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -147,36 +147,29 @@
           class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Daine Dvorak</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://bit.ly/DainesLinkedIn" class="facebook"><i class="bx bxl-facebook"></i>
+          <a href="https://bit.ly/DainesLinkedIn" target="_blank" class="facebook"><i class="bx bxl-facebook"></i>
           </a>
-          <a href="https://bit.ly/DaineDLinkedIn2" class="linkedin"><i class="bx bxl-linkedin"></i>
+          <a href="https://bit.ly/DaineDLinkedIn2" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i>
           </a>
-          <a href="https://bit.ly/DDGitHub" class="github"><i class="bx bxl-github"></i>
+          <a href="https://bit.ly/DDGitHub" target="_blank" class="github"><i class="bx bxl-github"></i>
           </a>
-          <a href="https://bit.ly/DD_JETTLIFE" class="youtube"><i class="bx bxl-youtube"></i>
+          <a href="https://www.youtube.com/channel/UCFyLSK8FIbfsw4VSPicd3qw" target="_blank" class="youtube"><i class="bx bxl-youtube"></i>
           </a>
         </div>
       </div>
 
-
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="https://dainedvorak.com/z_dev/public/index.html#hero" class="nav-link scrollto active"><i
-                class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="https://dainedvorak.com/z_dev/public/index.html#about" class="nav-link scrollto"><i
-                class="bx bx-user"></i> <span>About Me</span></a></li>
-          <li><a href="https://dainedvorak.com/z_dev/public/index.html#resume" class="nav-link scrollto"><i
-                class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="https://dainedvorak.com/z_dev/public/index.html#workHistorydd" class="nav-link scrollto"><i
-                class="bx bx-file-blank"></i> <span>
-                <h3></h3>Work History <span class="badge bg-success p-1"> New </span></h3>
-              </span></a></li>
-          <li><a href="https://dainedvorak.com/z_dev/public/showcase-details-template.html" class="nav-link scrollto"><i
-                class="bx bx-book-content"></i> <span>Daine Dvorak's Portfolio</span></a></li>
-          <li><a href="https://dainedvorak.com/z_dev/public/index.html#services" class="nav-link scrollto"><i
-                class="bx bx-server"></i> <span>Services</span></a></li>
-          <li><a href="https://dainedvorak.com/z_dev/public/index.html#contact" class="nav-link scrollto"><i
-                class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li><a href="https://dainedvorak.com/z_dev/public/" class="nav-link scrollto"><i class="bx bx-home"></i>
+              <span>Home</span></a></li>
+          <li><a href="https://dainedvorak.com/z_dev/public/#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About Me</span></a></li>
+  
+          <li><a href="https://dainedvorak.com/z_dev/public#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>My Skills</span></a></li>
+          <li><a href="https://dainedvorak.com/z_dev/public#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resumes</span></a></li>
+          <li><a href="https://dainedvorak.com/z_dev/public#workHistorydd" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Work History</span></a></li>
+          <li><a href="https://dainedvorak.com/portfolio/index.html" class="nav-link"><i class="bx bx-book-content"></i> <span>Portfolio Index</span></a></li>
+          <li><a href="https://dainedvorak.com/z_dev/public#testimonials" class="nav-link scrollto"><i class="bx carbon-user-speaker"></i> <span>Testimonials</span></a></li>
+          <li><a href="https://dainedvorak.com/z_dev/public#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
