--- a/portfolio/bookmarklet-schema-validator/index.html
+++ b/portfolio/bookmarklet-schema-validator/index.html
@@ -189,12 +189,12 @@
                      </div>
                      <div class="col-lg">
                         <div class="container mt-5">
-                           <div class="card shadow">
+                           <div class="card">
                               <div class="card-header">
                                  <strong>Portfolio Item Details</strong>
                               </div>
                               <div class="card-body">
-                                 <h4>What is a bookmarklet?</h4>
+                                 <h2>What is a bookmarklet?</h2>
                                     <p>Imagine you have a magic button in your bookmarks bar on the computer, right where you save your favorite websites to visit them again easily. A bookmarklet is like one of those buttons, but instead of taking you to another website, it does something special on the page you're already on when you click it.</p>
             
                                     <p> For example, if you're looking at a really long story and you want to make the letters bigger so it's easier to read, you could click on your magic button, and like magic, the letters grow bigger! Or, if you wanted to save a picture from the website to your computer, you could use another magic button to do that without having to ask an adult for help.</p>
@@ -222,29 +222,57 @@
                         </div>
                      </div>
                      <div class="portfolio-description">
-                        <h2 class="display-2" id="h2_showcase_header">Bookmarklet to
-                           Validate Schema</h2>
+                        <h2 class="display-2 mt-4" id="h2_showcase_header">Bookmarklet to Automatically Validate Schema</h2>
                         <h3 style="font-weight: 900;">Introduction:</h3>
-                        <p>{{showcase_intoduction}}</p>
+                        <p>I am excited to share an innovative tool I developed to enhance our web development processes: a bookmarklet designed for the automatic validation of schema markup. This tool emerged from the necessity to optimize and ensure the accuracy of schema markup across various web projects, aiming to replace the tedious manual validation process with a streamlined, efficient solution.
+                        </p>
                         <a href="https://dainedvorak.com/portfolio/bookmarklet-schema-validator/example-schema.html" target=”_blank” id="showcase_example_webpage_link">Example Webpage With Schema</a>
+                        <br>
                         <h3 style="font-weight: 900;">Challenge:</h3>
-                        <p>{{Challenge_Content}} </p>
+                        <p>
+                           Before the bookmarklet, validating schema markup was a manual and time-intensive task. It involved navigating to the Schema.org validator, inputting each URL individually, waiting for the validation results, and then documenting these in our project management system. This not only consumed valuable time but also introduced the risk of human errors, affecting the overall quality of our web projects.
+
+
+                        </p>
                         <h3 style="font-weight: 900;">Strategy:</h3>
-                        <p>{{Strategy_Content}}</p>
+                        <p>
+                           To address this challenge, I engineered a JavaScript-based bookmarklet that automates the schema validation process. By simply clicking the bookmarklet while on a webpage, it automatically redirects to validate.schema.org, submitting the current page for validation. I documented the setup and usage process in a comprehensive SOP, ensuring easy adoption by our team. This tool represents a pivotal development in our web optimization toolkit, embodying our commitment to efficiency and accuracy.
+                        </p>
                         <h3 style="font-weight: 900;">Results:</h3>
                         <ul>
-                           <li id="results_1">{{Results_Content_1}}</li>
-                           <li id="results_2">{{Results_Content_2}}</li>
-                           <li id="results_3">{{Results_Content_3}}</li>
-                           <li id="results_4">{{Results_Content_4}}</li>
-                           <li id="results_5">{{Results_Content_5}}</li>
-                           <li id="results_6">{{Results_Content_6}}</li>
+                           <li id="results_1">
+                              Time Efficiency: The bookmarklet significantly reduces the validation time by approximately 3 minutes per webpage, offering a practical solution to a previously time-consuming task.
+
+                           </li>
+                           <li id="results_2">
+                              Process Simplification: It transforms the validation process into a seamless, one-click operation, eliminating the need for manual URL submissions and result checking.
+
+                           </li>
+                           <li id="results_3">
+                              Accuracy Improvement: Automating the process minimizes human error, ensuring more reliable and consistent validation outcomes.
+
+                           </li>
+                           <li id="results_4">
+                              Productivity Enhancement: The cumulative time saved across numerous validations significantly boosts our team's productivity, allowing us to allocate more resources to strategic tasks and innovation.
+
+                           </li>
+                           <li id="results_5">
+                              Ease of Use: Its user-friendly design makes advanced schema validation accessible to team members of varying technical skills.
+
+                           </li>
+                           <li id="results_6">
+                              Documentation and SOP: The detailed SOP facilitates quick setup and utilization, fostering widespread adoption within our team and enhancing our workflow efficiency.
+                           </li>
                         </ul>
                         
                         <h3 style="font-weight: 900;">Impact:</h3>
-                        <p>{{Impact_Content}}</p>
+                        <p>
+                           The development and implementation of this bookmarklet have revolutionized our approach to schema markup validation. By saving time, reducing errors, and simplifying the validation process, we've enhanced our team's capacity for focusing on more complex and impactful projects. This tool is a testament to our innovative spirit and commitment to continuous improvement in digital marketing and web development practices.
+                        </p>
                         <h4 style="font-weight: 900;">Summary:</h4>
-                        <p id="port_summary"> {{Summary_Content}} </p>
+                        <p id="port_summary"> 
+                           The bookmarklet for auto-validating schema markup stands as a significant achievement in my career, embodying my dedication to innovation, efficiency, and quality in digital marketing and web development. It showcases my ability to identify challenges, devise effective solutions, and implement tools that drive operational excellence and team productivity.
+                        </p>
                      </div>
                   </div>
                </div>
