--- a/portfolio/coding/index.html
+++ b/portfolio/coding/index.html
@@ -197,33 +197,7 @@
          </div>
       </section>
       <!-- End Breadcrumbs -->
-      <div class="col-lg">
-         <div class="container mt-5">
-            <div class="card shadow">
-               <div class="card-header">
-                  <strong>Portfolio Item Details</strong>
-               </div>
-               <div class="card-body">
-                  <ul class="list-unstyled">
-                     <li class="mb-2 mt-0">
-                        <strong>Category</strong>:
-                        <ul>
-                           <li id="portfolio_category">{{portfolio_category}}</li>
-                        </ul>
-                     </li>
-                     <li>
-                        <strong>Key Skills Highlighted</strong>:
-                        <ul>
-                           <li id="skill_1_portfolio">{{skill_1_portfolio}}</li>
-                           <li id="skill_2_portfolio">{{skill_2_portfolio}}</li>
-                           <li id="skill_3_portfolio">{{skill_3_portfolio}}</li>
-                        </ul>
-                     </li>
-                  </ul>
-               </div>
-            </div>
-         </div>
-      </div>
+      
       <!-- ======= Portfolio Details Section ======= -->
       <section id="portfolio-details" class="portfolio-details">
          <div class="container">
@@ -242,6 +216,33 @@
                         </div>
                      </div>
                      <div class="swiper-pagination"></div>
+                  </div>
+                  <div class="col-lg">
+                     <div class="container mt-5">
+                        <div class="card shadow">
+                           <div class="card-header">
+                              <strong>Portfolio Item Details</strong>
+                           </div>
+                           <div class="card-body">
+                              <ul class="list-unstyled">
+                                 <li class="mb-2 mt-0">
+                                    <strong>Category</strong>:
+                                    <ul>
+                                       <li id="portfolio_category">{{portfolio_category}}</li>
+                                    </ul>
+                                 </li>
+                                 <li>
+                                    <strong>Key Skills Highlighted</strong>:
+                                    <ul>
+                                       <li id="skill_1_portfolio">{{skill_1_portfolio}}</li>
+                                       <li id="skill_2_portfolio">{{skill_2_portfolio}}</li>
+                                       <li id="skill_3_portfolio">{{skill_3_portfolio}}</li>
+                                    </ul>
+                                 </li>
+                              </ul>
+                           </div>
+                        </div>
+                     </div>
                   </div>
                   <div class="portfolio-description">
                      <h2 class="display-2" id="h2_showcase_header">The Bookmarklet Breakthrough in SEO Efficiency</h2>
@@ -316,25 +317,26 @@
                </div>
             </div>
          </div>
-         <section class="bsb-cta-2">
+         <section class="bsb-cta-2 mb-5">
             <div class="container-fluid">
+                <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
+                <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.3/components/ctas/cta-2/assets/css/cta-2.css" />                     
                <div class="card border-0 rounded-3 overflow-hidden text-center bsb-overlay"
-                  style="background-image: url('https://img.freepik.com/free-photo/vivid-abstract-background-cubes_58702-6098.jpg?w=1380&t=st=1707776305~exp=1707776905~hmac=dc14b93f5e91a5fcf550f7e5de181e106c8bd11eabab6bd1b42cf4c6536589b0'); --bsb-overlay-opacity: .7; --bsb-overlay-bg-color:var(--bs-primary-rgb);">
-                  <div class="card-body">
+                  style="background-image: url('https://dainedvorak.com/images/cta-background/cta-background-11-100.jpg'); background-position: left center; --bsb-overlay-opacity: .3; --bsb-overlay-bg-color:var(--bs-primary-rgb);">
+                  <div class="card-body mb-5">
                      <div class="row align-items-center justify-content-center">
                         <div class="col-12 col-md-10 col-xl-8 col-xxl-7">
-                           <h2 class="h5 mb-4 text-white text-uppercase">Our Services & Expertise</h2>
-                           <h3 class="display-4 text-white mb-5">We are a design agency studio delivering custom
-                              creative & unique websites.</h3>
+                           <h2 class="h5 mb-4 text-white text-uppercase"  style="text-shadow: 2px 2px 2px #000000;">
+                            Impressed by what you’ve seen?
+                        </h2>
+                           <h3 class="display-4 text-white fw-bold mb-5"  style="text-shadow: 2px 2px 2px #000000;">
+                            Imagine the impact on your projects.
+                        </h3>
                            <div class="btn-group">
-                              <a href="#!" class="btn btn-light bsb-btn-3xl rounded mb-0 text-nowrap" style="margin-right: 5px;"><img src="https://dainedvorak.com/cdn-net/icons/cta-phone-icon.png
-" style="height: 40px; width: auto; margin-right: 5px;">Call Now!</a>
-<br>
-                              <a href="#!" class="btn btn-light bsb-btn-3xl rounded mb-0 text-nowrap" style="margin-right: 5px;"><img src="https://dainedvorak.com/cdn-net/icons/cta-mail-icon.png
-
-" style="height: 40px; width: auto; margin-right: 5px;">Send An Email!</a>
-                              <a href="#!" class="btn btn-light bsb-btn-3xl rounded mb-0 text-nowrap"><img src="https://dainedvorak.com/cdn-net/icons/cta-linkedin-icon.png
-" style="height: 40px; width: auto; margin-right: 5px;">View LinkedIn</a>
+                              <a href="tel:19132294694" class="btn btn-warning bsb-btn-3xl rounded mb-0 text-nowrap shadow" style="margin-right: 5px;"><img src="https://dainedvorak.com/cdn-net/icons/cta-phone-icon.png" style="height: 40px; width: auto; margin-right: 5px;">Call Now!</a>
+        <br>
+                              <a href="https://dainedvorak.com/contact-me/index.html" class="btn btn-Light shadow bsb-btn-3xl rounded mb-0 text-nowrap" style="margin-right: 5px;  background-color: #fff;"><img src="https://dainedvorak.com/cdn-net/icons/cta-mail-icon.png" style="height: 40px; width: auto; margin-right: 5px;">Send An Email!</a>
+                              <a href="https://bit.ly/DDLinkedin" class="btn btn-info bsb-btn-3xl shadow rounded mb-0 text-nowrap"><img src="https://dainedvorak.com/cdn-net/icons/cta-linkedin-icon.png" style="height: 40px; width: auto; margin-right: 5px;">View LinkedIn</a>
                            </div>
                         </div>
                      </div>
@@ -342,7 +344,6 @@
                </div>
             </div>
          </section>
-      </section>
       <!-- End Portfolio Details Section -->
    </main>
    <!-- End #main -->
