--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -162,14 +162,28 @@
         <ul>
           <li><a href="https://dainedvorak.com/z_dev/public/" class="nav-link scrollto"><i class="bx bx-home"></i>
               <span>Home</span></a></li>
-          <li><a href="https://dainedvorak.com/z_dev/public/#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About Me</span></a></li>
+          <li><a href="https://dainedvorak.com/z_dev/public#about" class="nav-link scrollto"><i class="bx bx-user"></i> 
+            <span>About Me</span></a></li>
   
-          <li><a href="https://dainedvorak.com/z_dev/public#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>My Skills</span></a></li>
-          <li><a href="https://dainedvorak.com/z_dev/public#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resumes</span></a></li>
-          <li><a href="https://dainedvorak.com/z_dev/public#workHistorydd" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Work History</span></a></li>
-          <li><a href="https://dainedvorak.com/portfolio/index.html" class="nav-link"><i class="bx bx-book-content"></i> <span>Portfolio Index</span></a></li>
-          <li><a href="https://dainedvorak.com/z_dev/public#testimonials" class="nav-link scrollto"><i class="bx carbon-user-speaker"></i> <span>Testimonials</span></a></li>
-          <li><a href="https://dainedvorak.com/z_dev/public#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li><a href="https://dainedvorak.com/z_dev/public#skills" class="nav-link scrollto"><i class="bx bx-server"></i> .
+            <span>My Skills</span></a></li>
+
+          <li><a href="https://dainedvorak.com/z_dev/public#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> 
+            <span>Resumes</span></a></li>
+
+            <li><a href="https://dainedvorak.com/portfolio/index.html" class="nav-link scrollto active"><i class="bx bx-book-content"></i> 
+                <span>Portfolio Index</span></a></li>
+                <li><a href="https://dainedvorak.com/z_dev/public#testimonials" class="nav-link scrollto"><i class="bx bx-user-voice"></i> 
+                    <span>Testimonials</span></a></li>
+ 
+                    <li><a href="https://dainedvorak.com/z_dev/public#schoolDD" class="nav-link scrollto"><i class="bx bx-bus-school"></i> 
+                        <span>Education</span></a></li>
+
+                    <li><a href="https://dainedvorak.com/z_dev/public#workHistorydd" class="nav-link scrollto"><i class="bx bx-briefcase"></i> 
+            <span>Work History</span></a></li>
+
+          <li><a href="https://dainedvorak.com/z_dev/public#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> 
+            <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -266,9 +280,8 @@
               </div>
             </div>
           </div>
-</div>
-<div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-          <div class="col-lg-4 col-md-6 portfolio-item filter-dev">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-dev filter-innovate">
             <div class="portfolio-wrap"
               style="border-radius: 25px; border: 2px solid rgb(0, 0, 0); box-shadow: 2px 3px 2px 3px rgba(0, 0, 0, 0.562);">
               <img
@@ -286,7 +299,19 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-automation">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-automation filter-seo">
+            <div class="portfolio-wrap" style="border-radius: 25px; border: 2px solid rgb(0, 0, 0); box-shadow: 2px 3px 2px 3px rgba(0, 0, 0, 0.562);">
+              <img src="https://dainedvorak.com/portfolio/seo-technical-audit-automated-workbook/tech-audit-scalable---cover-1.png" class="img-fluid" alt="Promotional image for 'Fully Scalable SEO Technical Audit' showcasing key skills and net gain, associated with Daine Dvorak's SEO expertise.">
+              <div class="portfolio-links">
+                <a href="https://dainedvorak.com/portfolio/seo-technical-audit-automated-workbook/tech-audit-scalable-cover.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Cover slide for 'Comprehensive - Fully Scalable Technical Audit' featuring a spreadsheet from Daine Dvorak's SEO Technical Audit Analysis Workbook.">
+  <i class="bx bx-plus"></i>
+  </a>
+                <a href="https://dainedvorak.com/portfolio/seo-technical-audit-automated-workbook/index.html" title="More Details">
+  <i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-automation filter-seo">
             <div class="portfolio-wrap"
               style="border-radius: 25px; border: 2px solid rgb(0, 0, 0); box-shadow: 2px 3px 2px 3px rgba(0, 0, 0, 0.562);">
               <img src="https://dainedvorak.com/portfolio/seo-process-automation/process-automation---cover-1.png"
@@ -315,7 +340,18 @@
               </div>
             </div>
           </div>
-
+          <div class="col-lg-4 col-md-6 portfolio-item filter-automation filter-dev filter-seo">
+            <div class="portfolio-wrap"  style="border-radius: 25px; border: 2px solid rgb(0, 0, 0); box-shadow: 2px 3px 2px 3px rgba(0, 0, 0, 0.562);">
+              <img src="https://dainedvorak.com/portfolio/bookmarklet-schema-validator/Schema Auto Validator - Cover.png" class="img-fluid" alt="Promotional graphic for 'Validate Schema Bookmarklet' highlighting key skills in bookmarklets and JavaScript, and features for SEO automation.">
+              <div class="portfolio-links">
+                <a href="https://dainedvorak.com/portfolio/bookmarklet-schema-validator/cover_2_bookmarklet-auto-validate-schema-markup.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Gif showing the real user experience when using this bookmarklet to auto validate schema markup for any webpage simply by clicking the bookmark">
+  <i class="bx bx-plus"></i>
+  </a>
+                <a href="https://dainedvorak.com/portfolio/bookmarklet-schema-validator/index.html" title="More Details">
+  <i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
