--- a/portfolio/seo-technical-audit-automated-workbook/index.html
+++ b/portfolio/seo-technical-audit-automated-workbook/index.html
@@ -204,15 +204,16 @@
                                     <li class="mb-2 mt-0">
                                        <strong>Category</strong>:
                                        <ul>
-                                          <li id="portfolio_category">{{portfolio_category}}</li>
+                                          <li id="portfolio_category">Techncial Search Engine Optimization (SEO)</li>
                                        </ul>
                                     </li>
                                     <li>
                                        <strong>Key Skills Highlighted</strong>:
                                        <ul>
-                                          <li id="skill_1_portfolio">{{skill_1_portfolio}}</li>
-                                          <li id="skill_2_portfolio">{{skill_2_portfolio}}</li>
-                                          <li id="skill_3_portfolio">{{skill_3_portfolio}}</li>
+                                          <li id="skill_1_portfolio">Technical SEO Expertise
+                                          </li>
+                                          <li id="skill_2_portfolio">Custom Formulas, and JavaScript</li>
+                                          <li id="skill_3_portfolio">Innovation</li>
                                        </ul>
                                     </li>
                                  </ul>
@@ -225,22 +226,32 @@
                         <h3 style="font-weight: 900;">Introduction:</h3>
                         <p>The SEO Technical Audit Template Workbook -  distills complex SEO tasks into actionable steps, focusing on key areas like crawl errors, site speed, and security. Tailored for both seasoned professionals and beginners, it provides checklists and best practices to enhance website performance and search rankings. This concise guide emphasizes a strategic approach to organic growth and digital competitiveness, making it an invaluable tool for anyone looking to complete comphrensive technical audits or a simple discovery audit on technical landscape of perspective clients and competitors. </p>
                         <h3 style="font-weight: 900;">Challenge:</h3>
-                        <p>{{Challenge_Content}} </p>
+                        <p>
+                           Traditional SEO Technical Audits were labor-intensive, requiring hours of manual data collection, analysis, and reporting. This process was especially cumbersome for large websites, with time requirements ballooning for sites exceeding hundreds of pages. The need for a solution that could adapt to any website size and automate data collection was clear.
+                        </p>
                         <h3 style="font-weight: 900;">Strategy:</h3>
-                        <p>{{Strategy_Content}}</p>
+                        <p>
+                           I addressed this challenge by leveraging Google App Scripts to automate 98% of the data collection, significantly reducing manual effort. The template is designed to auto-filter audit questions based on the level of effort (LOE) and statement of work (SOW) requirements. By simply setting parameters on the home sheet, users can initiate a comprehensive audit tailored to their specific needs. Dynamic formulas were integrated to convert raw data into actionable insights automatically, making the process as efficient as clicking a button.
+
+
+                        </p>
                         <h3 style="font-weight: 900;">Results:</h3>
                         <ul>
-                           <li id="results_1">{{Results_Content_1}}</li>
-                           <li id="results_2">{{Results_Content_2}}</li>
-                           <li id="results_3">{{Results_Content_3}}</li>
-                           <li id="results_4">{{Results_Content_4}}</li>
-                           <li id="results_5">{{Results_Content_5}}</li>
-                           <li id="results_6">{{Results_Content_6}}</li>
+                           <li id="results_1">Time Efficiency: The new process reduces the time required for a discovery technical audit from an average of 5-7 hours to just 1-3 hours, and a full-blown technical audit for a 1,000-page website from 15-20 hours to only 2-4 hours.</li>
+                           <li id="results_2">Process Simplification: The template's scalability ensures that the size of the website no longer impacts the audit's efficiency, with the only variable being the crawl time by tools like ScreamingFrog.
+                           </li>
+                           <li id="results_3">Accuracy and Quality Improvement: Automated data collection and insight generation enhance the quality of deliverables, ensuring more reliable and insightful audit outcomes.
+                           </li>
+                           <li id="results_4">Productivity Enhancement: The comprehensive time savings, combined with the high quality of the audit deliverables, greatly enhance overall productivity and the ability to handle larger volumes of audits simultaneously.
+
+                           </li>
                         </ul>
                         <h3 style="font-weight: 900;">Impact:</h3>
-                        <p>{{Impact_Content}}</p>
+                        <p>This scalable, automated SEO Technical Audit template represents a significant leap forward in SEO audit capabilities. It not only saves considerable time but also ensures that the audits are more insightful, regardless of the website's size. The creation of an accompanying SOP further solidifies this tool as a cornerstone in our SEO audit process, setting a new standard for efficiency and effectiveness.               </p>
                         <h4 style="font-weight: 900;">Summary:</h4>
-                        <p id="port_summary"> {{Summary_Content}} </p>
+                        <p id="port_summary">My development of a scalable, automated custom template for SEO Technical Audits exemplifies my commitment to innovation and efficiency in SEO practices. By significantly reducing the time and effort required for comprehensive audits, this tool has become an invaluable asset in our SEO toolkit, enabling us to deliver superior quality audits with unprecedented speed.
+
+                        </p>
                      </div>
                   </div>
                </div>
