--- a/portfolio/bookmarklet-schema-validator/example-schema.html
+++ b/portfolio/bookmarklet-schema-validator/example-schema.html
@@ -7,7 +7,19 @@
 <meta name="Description" content="Enter your description here"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="https://dainedvorak.com/assets/favicon_resources/prod/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="https://dainedvorak.com/assets/favicon_resources/prod/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-16x16.png">
+  <link rel="manifest" href="https://dainedvorak.com/assets/favicon_resources/prod/site.webmanifest">
+  <link rel="mask-icon" href="https://dainedvorak.com/assets/favicon_resources/prod/safari-pinned-tab.svg" color="#0066ff">
+  <link rel="shortcut icon" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon.ico">
+  <meta name="msapplication-TileColor" content="#0066ff">
+  <meta name="msapplication-TileImage" content="https://dainedvorak.com/assets/favicon_resources/prod/mstile-144x144.png">
+  <meta name="msapplication-config" content="https://dainedvorak.com/assets/favicon_resources/prod/browserconfig.xml">
+  <meta name="theme-color" content="#0066ff">
 <title>Example Webpage With Google Rich Results</title>
 </head>
 <body>
