--- a/portfolio/ranking-for-non-branded-keywords/index.html
+++ b/portfolio/ranking-for-non-branded-keywords/index.html
@@ -12,26 +12,19 @@
     <meta name="author" content="Daine Dvorak">
     <link rel="canonical" href="https://dainedvorak.com/portfolio/leadership-and-management/index.html" />
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180"
-        href="https://dainedvorak.com/z_dev/public/assets/img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32"
-        href="https://dainedvorak.com/z_dev/public/assets/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="194x194"
-        href="https://dainedvorak.com/z_dev/public/assets/img/favicon/favicon-194x194.png">
-    <link rel="icon" type="image/png" sizes="192x192"
-        href="https://dainedvorak.com/z_dev/public/assets/img/favicon/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="16x16"
-        href="https://dainedvorak.com/z_dev/public/assets/img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="https://dainedvorak.com/z_dev/public/assets/img/favicon/site.webmanifest">
-    <link rel="mask-icon" href="https://dainedvorak.com/z_dev/public/assets/img/favicon/safari-pinned-tab.svg"
-        color="#007cff">
-    <link rel="shortcut icon" href="https://dainedvorak.com/z_dev/public/assets/img/favicon/favicon.ico">
-    <meta name="msapplication-TileColor" content="#007cff">
-    <meta name="msapplication-TileImage"
-        content="https://dainedvorak.com/z_dev/public/assets/img/favicon/mstile-144x144.png">
-    <meta name="msapplication-config"
-        content="https://dainedvorak.com/z_dev/public/assets/img/favicon/browserconfig.xml">
-    <meta name="theme-color" content="#007cff">
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="https://dainedvorak.com/assets/favicon_resources/prod/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="https://dainedvorak.com/assets/favicon_resources/prod/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-16x16.png">
+  <link rel="manifest" href="https://dainedvorak.com/assets/favicon_resources/prod/site.webmanifest">
+  <link rel="mask-icon" href="https://dainedvorak.com/assets/favicon_resources/prod/safari-pinned-tab.svg" color="#0066ff">
+  <link rel="shortcut icon" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon.ico">
+  <meta name="msapplication-TileColor" content="#0066ff">
+  <meta name="msapplication-TileImage" content="https://dainedvorak.com/assets/favicon_resources/prod/mstile-144x144.png">
+  <meta name="msapplication-config" content="https://dainedvorak.com/assets/favicon_resources/prod/browserconfig.xml">
+  <meta name="theme-color" content="#0066ff">
 
 
     <!-- Google Fonts -->
